// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Component renders correctly when params.slug is not present 1`] = `
<DocumentFragment>
  <nav
    class="w-full text-left border-b border-slate-300 pb-4 mb-6"
  >
    <ul
      class="inline-flex gap-8 list-disc justify-start"
    >
      <li
        class="font-bold list-none"
      >
        Navigation
      </li>
      <li
        class="w-full text-left"
      >
        <a
          href="/"
        >
          Home
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Component renders correctly when params.slug is present 1`] = `
<DocumentFragment>
  <nav
    class="w-full text-left border-b border-slate-300 pb-4 mb-6"
  >
    <ul
      class="inline-flex gap-8 list-disc justify-start"
    >
      <li
        class="font-bold list-none"
      >
        Navigation
      </li>
      <li
        class="w-full text-left"
      >
        <a
          href="/"
        >
          Home
        </a>
      </li>
      <li
        class="w-full text-left"
      >
        <a
          href="test-article"
        >
          Article
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
